package com.donatrack.donaciones.dominio;

public enum Genero {
    MASCULINO,
    FEMENINO,
    NO_BINARIO,
    OTRO,
    PREFIERO_NO_DECIR
}
