package ar.utn.donatrack.donaciones.models.categoria;

public enum TipoBien {
  PERECIBLE,
  CON_ESTADO,
  GENERICO
}
