@startuml modelo-donaciones
'  Diagrama de clases - MODELO DE DOMINIO - servicio-donaciones
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
  BackgroundColor #E3F0FF
  BorderColor #1565C0
  ArrowColor #37474F
}
skinparam enum {
  BackgroundColor #F5F5F5
  BorderColor #424242
}
hide circle
title Modelo de Dominio - Servicio de Donaciones

' ===================== PERSONAS DONANTES =====================
abstract class PersonaDonante {
  # id : UUID
  # tipoDocumento : String
  # numeroDocumento : String
  # email : String
  # ultimaInteraccion : LocalDateTime
}

class PersonaHumana {
  - nombre : String
  - apellido : String
  - fechaNacimiento : LocalDate
}

class PersonaJuridica {
  - razonSocial : String
  - rubro : String
}

class Representante {
  - nombre : String
  - apellido : String
  - email : String
}

enum EstadoDonante {
  ACTIVO
  INACTIVO
  BLOQUEADO
}

enum Genero {
  MASCULINO
  FEMENINO
  NO_BINARIO
  OTRO
  PREFIERO_NO_DECIR
}

enum TipoPersonaJuridica {
  GUBERNAMENTAL
  ONG
  EMPRESA
  INSTITUCION
}

' ===================== MEDIOS DE CONTACTO =====================
abstract class MedioDeContacto {
  # valor : String
}
class Email
class Telefono
class Whatsapp

' ===================== DIRECCION =====================
class Direccion {
  - calle : String
  - numero : int
  - codigoPostal : String
}
class Localidad {
  - nombre : String
}
class Provincia {
  - nombre : String
}

' ===================== DONACION =====================
class Donacion {
  # id : UUID
  # idDonante : UUID
  # idEntidadBeneficiaria : UUID
  # descripcion : String
  # fechaDonacion : LocalDateTime
  # fechaAsignacion : LocalDate
  + esPerecible() : boolean
  + requiereEstado() : boolean
}

class CambioEstado {
  - estado : EstadoDonacion
  - justificacion : String
  - fechaHora : LocalDateTime
}

enum EstadoDonacion {
  EN_DEPOSITO
  ASIGNACION_REALIZADA
  LISTA_PARA_ENTREGAR
  EN_TRASLADO
  ENTREGADA
  ENTREGA_FALLIDA
  VENCIDA
}

class ResultadoAsignacion {
  - idEntidad : UUID
  - puntaje : double
}

' ===================== BIENES =====================
abstract class Bien {
  # descripcion : String
  # foto : String
  # cantidad : int
  # unidad : String
}
class BienGenerico
class BienPerecible {
  - fechaVencimiento : LocalDate
}
class BienConEstado {
  - esNuevo : boolean
}

' ===================== CATEGORIAS =====================
class Categoria {
  - id : UUID
  - nombre : String
}
class Subcategoria {
  - tipo : String
  - tipoNormalizado : String
}
enum TipoBien {
  PERECIBLE
  CON_ESTADO
  GENERICO
}

' ===================== ENTIDADES / NECESIDADES =====================
class EntidadBeneficiaria {
  - id : UUID
  - razonSocial : String
}
class Campania {
  - idCampania : UUID
  - idEntidad : UUID
  - fechaInicio : LocalDate
  - fechaFin : LocalDate
  - descripcionGeneral : String
}
abstract class Necesidad {
  # id : UUID
  # nombre : String
  # descripcion : String
  # cantidadObjetivo : int
  # cantidadRecibida : int
  + recibirDonacion(int)
  + {abstract} estaSatisfecha() : boolean
}
class NecesidadExtraordinaria
class NecesidadRecurrente {
  - fechaInicioPeriodo : LocalDate
  + periodoVencido(LocalDate) : boolean
}
enum Periodicidad {
  SEMANAL (7)
  MENSUAL (30)
  CUATRIMESTRAL (120)
  ANUAL (365)
}

' ===================== RELACIONES =====================
PersonaHumana --|> PersonaDonante
PersonaJuridica --|> PersonaDonante
Email --|> MedioDeContacto
Telefono --|> MedioDeContacto
Whatsapp --|> MedioDeContacto

PersonaDonante --> EstadoDonante
PersonaDonante o-- "*" MedioDeContacto : contactos
PersonaDonante --> "1" MedioDeContacto : predeterminado
PersonaDonante o-- "1" Direccion
PersonaHumana --> Genero
PersonaJuridica --> TipoPersonaJuridica
PersonaJuridica o-- "*" Representante
Representante o-- "*" MedioDeContacto

Direccion o-- "1" Localidad
Localidad o-- "1" Provincia

Donacion o-- "*" Bien
Donacion o-- "*" CambioEstado : historialEstados
Donacion --> "1" Subcategoria
Donacion --> EstadoDonacion
CambioEstado --> EstadoDonacion

BienGenerico --|> Bien
BienPerecible --|> Bien
BienConEstado --|> Bien
Bien --> "1" Subcategoria

Categoria o-- "*" Subcategoria
Categoria --> TipoBien

EntidadBeneficiaria o-- "1" Direccion
EntidadBeneficiaria o-- "*" MedioDeContacto
EntidadBeneficiaria o-- "*" Representante
EntidadBeneficiaria o-- "*" Campania
Campania o-- "*" Necesidad
NecesidadExtraordinaria --|> Necesidad
NecesidadRecurrente --|> Necesidad
NecesidadRecurrente --> Periodicidad

@enduml
